# LifeInOrderBackend

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
migrations/2025-02-25-215552_create_users/: up.sql
migrations/2025-02-25-215553_create_user_days/: down.sql  up.sql
migrations/2025-03-21-192803_create_user_habits/: down.sql  up.sql
migrations/2025-03-21-192824_create_habit_values/: down.sql  up.sql
migrations/2025-03-21-192842_create_day_values/: down.sql  up.sql
src/: main.rs
src/config/: mod.rs
src/db/: diagram.dbml  models.rs  schema.rs
src/utils/: general.rs  misc_types.rs  mod.rs
