[package]
name = "LifeInOrderBackend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
actix-rt = "2.10.0"
dotenv= "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.12"
color-eyre = "0.6.3"
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.4", features = ["env_logger"] }
tracing-subscriber = "0.3.19"
config = "0.15.8"
