[package]
name = "LifeInOrderBackend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
actix-rt = "2.10.0"
dotenv= "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.12"
color-eyre = "0.6.3"
config = "0.15.8"
env_logger = "0.11.6"
log = "0.4.26"
